page break implemented

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
     </p>
  
 </div>
+    
+<div id="work">
+  
+    <p><strong><br>Here are more projects I have worked on.</strong>
+    </p>
+ 
+</div>
   
 <div id="page3">
   <a id="contact" class="smooth"></a>
